# ptm-visualization

./: .gitignore  README.md  pyproject.toml
configs/: default_bar.py  default_config.py  default_details.py  default_overview.py  max_quant_bar.py  max_quant_details.py  max_quant_overview.py  preprocessor_config.py  reader_config.py
protein_sequencing/: bar_plot.py  constants.py  details_plot.py  example_bar_parameters.py  example_overview_parameters.py  exon_helper.py  mascot_reader.py  overview_plot.py  parameters.py  plots.py  sequence_plot.py  uniprot_align.py  utils.py
protein_sequencing/data_preprocessing/: analysis.ipynb  analysis_2.ipynb  cleavage_csv_reformatter.py  groups.csv  groups_max_quant.csv  groups_tau.csv  mascot_preprocessor.py  mascot_reader.py  max_quant_preprocessor.py  max_quant_reader.py  ms_Fragger_reader.py  ms_fragger_preprocessor.py  preprocessor.py  preprocessor_helper.py  protein_pilot_preprocessor.py  protein_pilot_reader.py  reader_helper.py
tests/: preprocessor_tests.py  test_protein_sequencing.py
tests/configs/: default_config.py  mascot_config.py  max_quant_config.py  ms_fragger_config.py  preprocessor_config.py  protein_pilot_config.py
tests/results/: expected_result_mascot.csv  expected_result_max_quant_cleavages.csv  expected_result_max_quant_mods.csv  expected_result_ms_fragger_cleavages.csv  expected_result_ms_fragger_mods.csv  expected_result_protein_pilot_cleavages.csv  expected_result_protein_pilot_mods.csv
tests/test_data/: aligned.fasta  groups_mascot.csv  groups_max_quant.csv  groups_ms_fragger.csv  input.fasta  (+1 more)
(+7 files in other folders)
